# xilinx_tools

./: README.md
kria/: kria_overview.md
kria/development_tips/: kria_cross_compilation.md  vitis_tips.md
kria/development_tips/reference_files/convolution_xcompile/: CMakeLists.txt
kria/development_tips/reference_files/convolution_xcompile/src/: main.cpp
kria/development_tips/reference_files/helper_libs_src/: CMakeLists.txt  make_and_install.sh
kria/development_tips/reference_files/helper_libs_src/include/: xrt_helper.h
kria/development_tips/reference_files/helper_libs_src/src/: TimeMeasure.cpp  xrt_helper.cpp
kria/development_tips/reference_files/helper_libs_xcompile/: CMakeLists.txt  Readme.txt  make_and_install.sh
kria/development_tips/reference_files/vitis_config_files/: link.cfg
kria/kernel_based_design/: kernel_based_design.md
kria/kernel_based_design/reference_files/dtbo/: create_dtbo.sh
kria/kernel_based_design/reference_files/hls/project/: project.cfg
kria/kernel_based_design/reference_files/hls/src/: krnl_vadd.h  (+2 more)
kria/kernel_based_design/reference_files/kria/cpp_libs/helper_libs_src/: CMakeLists.txt  Readme.txt  make_and_install.sh
kria/kernel_based_design/reference_files/system/: link_vadd.sh
kria/opencv_kernel/: opencv_design.md
kria/opencv_kernel/reference_files/data/: convert_bin_8bit_to_bmp.py
kria/opencv_kernel/reference_files/dtbo/: create_dtbo.sh
kria/opencv_kernel/reference_files/gstreamer/: gst_rtp_pc.sh  gst_rtp_test.sh
kria/opencv_kernel/reference_files/hls/: run_hls.sh  run_hls.tcl
kria/opencv_kernel/reference_files/jupyter/: convolve_image.ipynb
kria/opencv_kernel/reference_files/kria/kria_cpp_sw/conv_single/: CMakeLists.txt
kria/opencv_kernel/reference_files/system/: link.cfg  link_convolution.sh
kria/resources/: opencv_installation.md
kria/resources/vitis_vision_L1/: opencv_compile.sh
vitis/: opencv_installation.md  vitis_overview.md
vitis/01_extensible_platform/: vitis_extensible_streaming_platform_design.md
vitis/02_kernel_based_design/: vitis_kernel_based_design.md
vitis/02_kernel_based_design/reference_files/system/: link_vadd.sh
vitis/03_opencv_kernel/: vitis_opencv_design.md
vitis/03_opencv_kernel/reference_files/data/: convert_bmp_8bit_to_bin_text.py
vitis/03_opencv_kernel/reference_files/dtbo/: dts.tcl
vitis/03_opencv_kernel/reference_files/system/: link_convolution.sh
vitis/04_sw_development/: vscode_cpp_development.md
vitis/extensible_platform/: vitis_extensible_streaming_platform_design.md
vitis/kernel_based_design/: vitis_kernel_based_design.md
vitis/kernel_based_design/reference_files/dtbo/: dts.tcl
vitis/kernel_based_design/reference_files/system/: link_vadd.sh
vitis/opencv_kernel/: vitis_opencv_design.md
vitis/opencv_kernel/reference_files/system/: link_convolution.sh
vitis_hls/: hls_overview.md  opencv.md  overview.md  project_setup.md
vitis_hls/tutorial_01/: hls_project_setup.md  tutorial_01.md  tutorial_01_b.md
vitis_hls/tutorial_01/reference_files/: Readme.md  run_demo.sh
vitis_hls/tutorial_01/reference_files/sol1/: sol1.sh  sol1_config.cfg
vitis_hls/tutorial_01/reference_files/sol2/: sol2.sh  sol2_config.cfg
vitis_hls/tutorial_01/reference_files/src/: fir.h
vitis_hls/tutorial_02/: tutorial_02.md
vitis_hls/tutorial_02/reference_files/: run_demo.sh
vitis_hls/tutorial_02/reference_files/sol1/: sol1_config.cfg
vitis_hls/tutorial_02/reference_files/src/: fir.c  fir_test.c
vitis_hls/tutorial_03/: tutorial_03.md
vitis_hls/tutorial_03/reference_files/sol1/: sol1_config.cfg
vitis_hls/tutorial_03/reference_files/src/: matmul.cpp  matmul.h  matmul_tb.cpp
vitis_hls/tutorial_04/: tutorial_04.md
vitis_hls/tutorial_04/reference_files/sol1/: sol1_config.cfg
vitis_hls/tutorial_04/reference_files/src/: accumulator.c  accumulator.h  accumulator_test.c
vivado/: vivado_overview.md
vivado/vivado_intro/: vivado_intro.md
vivado/vivado_intro/reference_files/: constr.xdc  counter.vhd  counter_tb.vhd
(+169 files in other folders)
